Doc - Refactor index.html, add precisions to various pages

--- a/src/model/Group.yml
+++ b/src/model/Group.yml
@@ -3,18 +3,23 @@
 # Used to create an empty group
 #
 
+# database id managed by the dbms
 id: 
 
+# unique within g5 groups
 slug:
 
 name:
 
+# cardinality
 'n': 0
 
+# 'occu' or 'history'
 type: 
 
 description: |
 
+# relative path to 
 download: 
 
 # array of source slugs
