--- a/src/model/wiki/BC.yml
+++ b/src/model/wiki/BC.yml
@@ -1,31 +1,35 @@
 # 
 # Template for the transcription of a birth certificate
-# 
-# --------------- NOT USED YET ---------------
-# 
+# The syntax used in this document is intended to transcribe
+# a summary of the information contained in the act.
+# Exhaustive transcription is done with another syntax.
 # 
 
 document:
-  type: acte de naissance
+  type: BC
   source:
-    cy: FR
+    place: 
+    cy: 
+    c1: 
     c2: 
-    city: Bourg-la-Reine
-    name: 1811 E_NUM_BRG38
+    c3: 
+    name: 
     web: 
       url: 
       page: 
-    notes:
+    notes: |
         
-  recup:
-    personne: Thierry Graff
-    date: '2019-12-21 02:29:53+01:00'
+  authors:
+    -
+      person: 
+      date: ''
+      action: 
 
 act:
   numéro: 
-  numéro-feuillet: 4
-  date: '1811-10-26 13:00'
-  lieu: Bourg-la-Reine
+  numéro-feuillet: 
+  date: ''
+  place: 
 
 # New born person
 person:
@@ -41,8 +45,6 @@ person:
   
   birth:
     date: ''     
-    tzo:   
-    date-ut:
     note: 
     lmt: 
     notime: 
