Prepare command cfepp/final3/raw2tmp

--- a/data/db/source/cfepp/cfepp.yml
+++ b/data/db/source/cfepp/cfepp.yml
@@ -1,12 +1,11 @@
 
 document:
   history:
-    - 2021-12-04 01:17:24+01:00: Thierry Graff, creation
+    - 2022-03-20 17:10:28+01:00: Thierry Graff, creation
 
 name: CFEPP
 slug: cfepp
 type: organization
 description: |
-  <b>Comité Français pour l'Etude des Phénomènes Paranormaux</b>
-  <br>French skeptic group ; published a test on the "mars effect" in 1996 with 1066 sport champions
-  
+  <b>Comité Français pour l'Etude des Phénomènes Paranormaux</b> (French Commitee for the study of paranormal phenomena).
+  <br>French skeptic group ; published a test on the "mars effect" in 1996 with 1066 sport champions.
