Continue import of cfepp test

--- a/data/db/source/cfepp/cfepp-booklet.yml
+++ b/data/db/source/cfepp/cfepp-booklet.yml
@@ -9,7 +9,7 @@ type: booklet
 authors:
   - CFEPP
 description: |
-  Book published by the CFEPP 1993, containing a description of the third skeptic test.
+  Booklet (paper edition) published by the CFEPP in 1996, containing a description of the third skeptic test.
   <br>By Claude Benski, Dominique Caudron, Yves Galifret, Jean-Paul Krivine, Jean-Claude Pecker, Michel Rouzé, Evry Schatzman, with a commentary of Jan Willem Nienhuys.
 parents:
   - cfepp
