Doc - modify installation

--- a/data/db/person/muller-234-women.yml
+++ b/data/db/person/muller-234-women.yml
@@ -317,8 +317,8 @@
     spouse: Valette
   birth:
     date: '1860-02-11 06:00'
-  acts:
-    - birth
+#  acts:
+#    birth: eymery-marguerite-1860-02-11
   notes:
     - |
       2021-07-10 17:20:03+01:00 Date checked on civil registry
