Doc - Corrections to page Ertel sportsmen

--- a/data/db/group/cfepp/cfepp-1066.yml
+++ b/data/db/group/cfepp/cfepp-1066.yml
@@ -7,7 +7,7 @@ slug: cfepp-1066
 type: history
 sources:
   - cfepp-final3
-  - cfepp-book
+  - cfepp-booklet
 
 description: |
   Group of athletes published by the CFEPP (Comité Français pour l'Etude des Phénomènes Paranormaux) in 1996.
