Prepare CFEPP tmp2db + doc

--- a/data/db/source/cfepp/nienhuys.yml
+++ b/data/db/source/cfepp/nienhuys.yml
@@ -8,3 +8,5 @@ slug: nienhuys
 type: person
 description: |
   Dutch skeptic, who analyzed the works of Gauquelin, Ertel and skeptic groups.
+parents:
+  - cfepp
