Start g55 tmp2db, prepare groups priests and minor painters

--- a/data/db/source/gauquelin/g55.yml
+++ b/data/db/source/gauquelin/g55.yml
@@ -7,9 +7,9 @@ name: L'influence des astres
 slug: g55
 type: book
 date: 1955
-author:
+authors:
   - Michel Gauquelin
 description: |
-  Book containing lists of 
+  First book of Michel Gauquelin published in 1955, containing lists of famous persons with their birth date and time.
 
   
