Continue g55 tmp2db

--- a/data/db/group/gauq/g55/g55-369-priests-albi.yml
+++ b/data/db/group/gauq/g55/g55-369-priests-albi.yml
@@ -8,7 +8,7 @@ name: Gauquelin 1955 - 369 priests, Albi
 type: history
 'n': 369
 sources:
-  - g55
+  - g55-369-priests-albi
 description: |
   List of catholic priests published in Gauquelin 1955 book, "Prêtres du diocèse d'Albi".
   
