--- a/data/db/group/gauq/g55/g55-513-priests-paris.yml
+++ b/data/db/group/gauq/g55/g55-513-priests-paris.yml
@@ -8,7 +8,7 @@ name: Gauquelin 1955 - 513 priests, Paris
 type: history
 'n': 513
 sources:
-  - g55
+  - g55-513-priests-paris
 description: |
   List of catholic priests published in Gauquelin 1955 book, "Prêtres du diocèse de Paris".
   
