--- a/data/db/group/gauq/g55/g55-362-minor-paintors.yml
+++ b/data/db/group/gauq/g55/g55-362-minor-paintors.yml
@@ -3,7 +3,7 @@
 #   history:
 #     - 2022-06-05 22:20:01+02:00: Thierry Graff, creation
 
-name: Gauquelin 1955 - 361 minor paintors
+name: Gauquelin 1955 - 362 minor paintors
 slug: g55-362-minor-paintors
 'n': 362
 type: history
@@ -13,3 +13,4 @@ sources:
 description: |
   List of paintors published in Gauquelin 1955 book.
   <br>The title of the original list is "361 peintres mineurs".
+  <br>Unlike most 1955 data, this list was not published in later LERRCP publications.
