Finish g55 tmp2db

--- a/data/db/group/gauq/g55/g55-362-minor-painters.yml
+++ b/data/db/group/gauq/g55/g55-362-minor-painters.yml
@@ -3,14 +3,14 @@
 #   history:
 #     - 2022-06-05 22:20:01+02:00: Thierry Graff, creation
 
-name: Gauquelin 1955 - 362 minor paintors
-slug: g55-362-minor-paintors
+name: Gauquelin 1955 - 362 minor painters
+slug: g55-362-minor-painters
 'n': 362
 type: history
 sources:
-  - g55-362-minor-paintors
+  - g55-362-minor-painters
 
 description: |
-  List of paintors published in Gauquelin 1955 book.
+  List of painters published in Gauquelin 1955 book.
   <br>The title of the original list is "361 peintres mineurs".
   <br>Unlike most 1955 data, this list was not published in later LERRCP publications.
