--- a/data/db/group/gauq/g55/06-361-minor-painters.yml
+++ b/data/db/group/gauq/g55/06-361-minor-painters.yml
@@ -1,14 +1,14 @@
   
 # document:
 #   history:
-#     - 2022-06-05 22:20:01+02:00: Thierry Graff, creation
+#     - 2022-07-24 01:06:23+02:00: Thierry Graff, creation
 
 name: Gauquelin 1955 - 362 minor painters
-slug: g55-362-minor-painters
+slug: g55-06-361-minor-painters
 'n': 362
 type: history
 sources:
-  - g55-362-minor-painters
+  - g55-book
 
 description: |
   List of painters published in Gauquelin 1955 book.
