--- a/data/db/group/gauq/g55/10-882-priests.yml
+++ b/data/db/group/gauq/g55/10-882-priests.yml
@@ -3,8 +3,8 @@
 #   history:
 #     - 2022-06-03 23:22:26+02:00: Thierry Graff, creation
 
-name: Gauquelin 1955 - 882 priests
-slug: g55-882-priests
+name: Gauquelin 1955 - 884 priests
+slug: g55-10-884-priests
 'n': 882
 type: history
 sources:
@@ -16,5 +16,5 @@ description: |
   <br>The title of the original list is "884 prêtres".
 
 children:
-  - g55-513-priests-paris
-  - g55-369-priests-albi
+  - g55-10-513-priests-paris
+  - g55-10-369-priests-albi
