Continue g55: debug gqid and tmp2db, adapt 361 minor painters to new code

--- a/data/db/group/gauq/g55/01-576-physicians.yml
+++ b/data/db/group/gauq/g55/01-576-physicians.yml
@@ -1,4 +1,4 @@
-  
+
 # document:
 #   history:
 #     - 2022-07-23 23:38:45+02:00: Thierry Graff, creation
@@ -14,10 +14,9 @@ description: |
   576 MEMBRES ASSOCIÉS ET CORRESPONDANTS DE L'ACADÉMIE DE MÉDECINE
   <br>p 245 - 255 of the original book
   <br>Published in LERRCP booklet A2
+    
 children:
 
-details: |
-  Académiciens de Médecine qui n’ont pu étre compris dans la statistique :
-  (Cette liste ne comprend pas les nombreux individus, dont a priori les renseignements de naissance ne pouvaient être demandés à l'état-civil, c'est-à-dire ceux nés avant 1800 ou nés a Paris. Elle est composée des Académiciens de Médecine qui, pour les autres raisons indiquées au chapitre « Choix des données » (p. 00), n’ont pu étre compris dans la statistique faute de renseignements suffisants.
-  ALISON, ASTROS, BARRAL, BAUDRIMONT, BERARD, BERNUTZ, BILLOD, BINET, BLACHIER, BLONDOT, BOINET, BONNET, BORDIER, BOUISSON, BOURGEOIS, BRUN, CAUVIERES, CHAMPETIER DE RIBES, CHELLE, CLOSMADEUC, COSTA, COZE, DAREMBERG, DECES, DECHAMBRE, DEMARQUAY, DUBOURG, DUMAS, DUMERIL, DUPLOUY, ENGEL, ETIENNE, FELTZ, FEREOL, FOLLET, FORGUES, GIRARD, GORRE-GASSICOURT, GOYRAUD, GUENEAUD DE MUSSY, GUIPON, HAMY, HECKEL, HILLAIRET, HUSSON, HUSSON, JOBERT, JOSIAS, KERMOGANT, LABBE, LACAZE-DUTHIERS, LAFOSSE, LANCEREAUX, LANGLET, LAPERSONNE, LAYET, LELUT, LEMAISTRE, LESAGE, LEVY, LUCAS-CHAMPONNIERE, MALASSEZ, MALGAIGNE, MARTY, MEGNIN, MEHU, MERIEL, MICHAUX, MICHON, MILIAN, MIQUEL, MOSNY, MURVILLE, NOVE-JOSSERAND, OUI, PAGNIEZ, PAYAN, PEISSE, PEUCH, PIERRET, POGGIALE, PUTEGNA, QUATREFAGES DE BREAU, ROUX, ROYER-COLLARD, SAINT-CYR, SERGENT, TESSIER, TIXIER, TONNELLE, TOULMONDE, TOURNEUX, TROISIER, TROLARD, TROUSSEAU, VANLAIR, VERNOIS, VILLARD, WIDAL, WORMS, WEBER
-
+#details: |
+#  Académiciens de Médecine qui n’ont pu étre compris dans la statistique : Cette liste ne comprend pas les nombreux individus, dont a priori les renseignements de naissance ne pouvaient être demandés à l'état-civil, c'est-à-dire ceux nés avant 1800 ou nés a Paris. Elle est composée des Académiciens de Médecine qui, pour les autres raisons indiquées au chapitre « Choix des données » (p. 00), n’ont pu étre compris dans la statistique faute de renseignements suffisants.
+#  ALISON, ASTROS, BARRAL, BAUDRIMONT, BERARD, BERNUTZ, BILLOD, BINET, BLACHIER, BLONDOT, BOINET, BONNET, BORDIER, BOUISSON, BOURGEOIS, BRUN, CAUVIERES, CHAMPETIER DE RIBES, CHELLE, CLOSMADEUC, COSTA, COZE, DAREMBERG, DECES, DECHAMBRE, DEMARQUAY, DUBOURG, DUMAS, DUMERIL, DUPLOUY, ENGEL, ETIENNE, FELTZ, FEREOL, FOLLET, FORGUES, GIRARD, GORRE-GASSICOURT, GOYRAUD, GUENEAUD DE MUSSY, GUIPON, HAMY, HECKEL, HILLAIRET, HUSSON, HUSSON, JOBERT, JOSIAS, KERMOGANT, LABBE, LACAZE-DUTHIERS, LAFOSSE, LANCEREAUX, LANGLET, LAPERSONNE, LAYET, LELUT, LEMAISTRE, LESAGE, LEVY, LUCAS-CHAMPONNIERE, MALASSEZ, MALGAIGNE, MARTY, MEGNIN, MEHU, MERIEL, MICHAUX, MICHON, MILIAN, MIQUEL, MOSNY, MURVILLE, NOVE-JOSSERAND, OUI, PAGNIEZ, PAYAN, PEISSE, PEUCH, PIERRET, POGGIALE, PUTEGNA, QUATREFAGES DE BREAU, ROUX, ROYER-COLLARD, SAINT-CYR, SERGENT, TESSIER, TIXIER, TONNELLE, TOULMONDE, TOURNEUX, TROISIER, TROLARD, TROUSSEAU, VANLAIR, VERNOIS, VILLARD, WIDAL, WORMS, WEBER
