Handle Gauquelin 1955 884 priests

--- a/data/db/group/gauq/g55/02-508-physicians.yml
+++ b/data/db/group/gauq/g55/02-508-physicians.yml
@@ -4,7 +4,7 @@
 #     - 2022-07-23 23:49:30+02:00: Thierry Graff, creation
 
 name: Gauquelin 1955 - 508 physicians
-slug: 02-508-physicians
+slug: g55-02-508-physicians
 'n': 508
 type: history
 sources:
