--- a/data/db/group/gauq/g55/03-570-sportsmen.yml
+++ b/data/db/group/gauq/g55/03-570-sportsmen.yml
@@ -4,7 +4,7 @@
 #     - 2022-07-23 23:59:54+02:00: Thierry Graff, creation
 
 name: Gauquelin 1955 - 570 sportsmen
-slug: 03-570-sportsmen
+slug: g55-03-570-sportsmen
 'n': 568
 type: history
 sources:
