--- a/data/db/group/gauq/g55/06-361-minor-painters.yml
+++ b/data/db/group/gauq/g55/06-361-minor-painters.yml
@@ -14,3 +14,4 @@ description: |
   List of painters published in Gauquelin 1955 book.
   <br>The title of the original list is "361 peintres mineurs".
   <br>Unlike most 1955 data, this list was not published in later LERRCP publications.
+  <br>p 301 - 307 of the original book
