--- a/data/db/source/muller/afd3-women-list.yml
+++ b/data/db/source/muller/afd3-women-list.yml
@@ -13,8 +13,8 @@ description: |
   List of 234 famous women, from Astro-Forschungs-Daten 3, Arno Müller, Waldmohr, 1993
   <br>Text file built by Nick Kollerstrom (scan) and Thierry Graff (OCR and corrections).
   <br>Integration to Open Gauquelin database : <a href="https://github.com/tig12/gauquelin5/tree/master/data/raw/muller/afd3-women">muller-afd3-women.txt</a>.
-  <br>Scans of original documents can be downloaded from <a href="https://g5.tig12.net/auxiliary/1993-muller-women/">g5.tig12.net</a>.
-  <br>More information about this file : <a href="https://tig12.github.io/gauquelin5/muller-234-women.html">tig12.github.io</a>.
+  <br>Scans of original documents can be downloaded from repository <a href="https://github.com/tig12/g5-aux/tree/main/1993-muller3-women">github.com/tig12/g5-aux</a>.
+  <br>More information about this file : <a href="https://tig12.github.io/gauquelin5/muller3-234-women.html">tig12.github.io</a>.
 parents:
   - afd3-booklet
   - g5
