--- a/data/db/source/eminence/math/bourbaki.yml
+++ b/data/db/source/eminence/math/bourbaki.yml
@@ -17,10 +17,10 @@ isbn:
 
 description: |
   This book was used to count the number of times each mathematician is cited in the book index
-  "INDEX DES NOMS CITÉS", pp 366 - 376 of the book
+  <br>"INDEX DES NOMS CITÉS", pp 366 - 376 of the book
   
-  See https://tig12.github.io/gauquelin5/eminence-math.html
-  See https://g5.tig12.net/auxiliary/eminence/math/bourbaki
+  <br><br>See <a href="https://tig12.github.io/gauquelin5/eminence-math.html">https://tig12.github.io/gauquelin5/eminence-math.html</a>
+  <br>See <a href="https://github.com/tig12/g5-aux/tree/main/eminence/math/bourbaki">https://github.com/tig12/g5-aux/tree/main/eminence/math/bourbaki</a>
 
 parents: []
   
