--- a/data/db/source/eminence/math/dieudonne.yml
+++ b/data/db/source/eminence/math/dieudonne.yml
@@ -17,10 +17,10 @@ isbn:
     
 description: |
   This book was used to count the number of times each mathematician is cited in the book index.
-  "Index historique", pp 495 - 512 of the book
+  <br>"Index historique", pp 495 - 512 of the book
   
-  See https://tig12.github.io/gauquelin5/eminence-math.html
-  See https://g5.tig12.net/auxiliary/eminence/math/dieudonne
+  <br><br>See <a href="https://tig12.github.io/gauquelin5/eminence-math.html">https://tig12.github.io/gauquelin5/eminence-math.html</a>
+  <br>See <a href="https://github.com/tig12/g5-aux/tree/main/eminence/math/dieudonne">https://github.com/tig12/g5-aux/tree/main/eminence/math/dieudonne</a>
 
 parents: []
   
