--- a/data/db/source/eminence/math/escofier.yml
+++ b/data/db/source/eminence/math/escofier.yml
@@ -18,10 +18,10 @@ isbn:
 
 description: |
   This book was used to count the number of times each mathematician is cited in the book index
-  Index, pp 125 - 128 of the book
+  <br>Index, pp 125 - 128 of the book
     
-  See https://tig12.github.io/gauquelin5/eminence-math.html
-  See https://g5.tig12.net/auxiliary/eminence/math/escofier
+  <br><br>See <a href="https://tig12.github.io/gauquelin5/eminence-math.html">https://tig12.github.io/gauquelin5/eminence-math.html</a>
+  See <a href="https://github.com/tig12/g5-aux/tree/main/eminence/math/escofier">https://github.com/tig12/g5-aux/tree/main/eminence/math/escofier</a>
 
 parents: []
   
