--- a/data/db/source/eminence/math/irem.yml
+++ b/data/db/source/eminence/math/irem.yml
@@ -18,10 +18,10 @@ isbn:
 
 description: |
   This book was used to count the number of times each mathematician is cited in the book index
-  "Index des noms", pp 415 - 419 of the book
+  <br>"Index des noms", pp 415 - 419 of the book
     
-  See https://tig12.github.io/gauquelin5/eminence-math.html
-  See https://g5.tig12.net/auxiliary/eminence/math/irem
+  <br><br>See <a href="https://tig12.github.io/gauquelin5/eminence-math.html">https://tig12.github.io/gauquelin5/eminence-math.html</a>
+  <br>See <a href="https://github.com/tig12/g5-aux/tree/main/eminence/math/irem">https://github.com/tig12/g5-aux/tree/main/eminence/math/irem</a>
 
 parents: []
   
