Fix broken links in doc and READMEs

--- a/data/db/source/eminence/math/peiffer-dahan-dalmenico.yml
+++ b/data/db/source/eminence/math/peiffer-dahan-dalmenico.yml
@@ -22,7 +22,7 @@ description: |
   <br>"Index des noms propres", p 307-309 of the book
   
   <br><br>See <a href="https://tig12.github.io/gauquelin5/eminence-math.html">https://tig12.github.io/gauquelin5/eminence-math.html</a>
-  See https://g5.tig12.net/auxiliary/eminence/math/peiffer-dahan-dalmenico
+  <br>See <a href="https://github.com/tig12/g5-aux/tree/main/eminence/math/peiffer-dahan-dalmenico">https://github.com/tig12/g5-aux/tree/main/eminence/math/peiffer-dahan-dalmenico</a>
 
 parents: []
   
