Finish import of 09-349-scientists

--- a/data/db/group/gauq/g55/09-349-scientists.yml
+++ b/data/db/group/gauq/g55/09-349-scientists.yml
@@ -4,7 +4,7 @@
 #     - 2022-10-06 23:37:32+02:00: Thierry Graff, creation
 
 name: Gauquelin 1955 - 349 scientists
-slug: g55-349-scientists
+slug: g55-09-349-scientists
 'n': 347
 type: history
 sources:
