--- a/data/db/init/lerrcp-tweak/A2.yml
+++ b/data/db/init/lerrcp-tweak/A2.yml
@@ -2,7 +2,8 @@
 # Human corrections to file A2
 # Fields sorted by NUM
 # 
-# 2019-10-15 22:32:20+02:00, Thierry Graff : Creation
+# history:
+# - 2019-10-15 22:32:20+02:00, Thierry Graff : Creation
 #
 
 -
