Better legal time computation for LERRCP serie A

--- a/src/model/wiki/BC.yml
+++ b/src/model/wiki/BC.yml
@@ -47,13 +47,12 @@ source:
 
   notes: |
     
-  
   images: []
   
 #
 # 4 - Transcription of the act
 #
-person:
+transcription:
   name:
     official:
       given:
