Doc - change github gauquelin5 to g5 in data/db

--- a/data/db/source/csicop/si42.yml
+++ b/data/db/source/csicop/si42.yml
@@ -15,7 +15,7 @@ authors:
 description: |
   Skeptical Inquier VOL IV NO. 2 WINTER 1979-80
   <br>Contains the only known published list of the CSICOP test.
-  <br>See <a href="https://tig12.github.io/gauquelin5/csicop.html">tig12.github.io/gauquelin5/csicop.html</a> for more informations.
+  <br>See <a href="https://tig12.github.io/g5/csicop.html">tig12.github.io/g5/csicop.html</a> for more informations.
 parents:
   - csicop-committee
   
