--- a/data/db/source/eminence/math/dieudonne.yml
+++ b/data/db/source/eminence/math/dieudonne.yml
@@ -19,7 +19,7 @@ description: |
   This book was used to count the number of times each mathematician is cited in the book index.
   <br>"Index historique", pp 495 - 512 of the book
   
-  <br><br>See <a href="https://tig12.github.io/gauquelin5/eminence-math.html">https://tig12.github.io/gauquelin5/eminence-math.html</a>
+  <br><br>See <a href="https://tig12.github.io/g5/eminence-math.html">https://tig12.github.io/g5/eminence-math.html</a>
   <br>See <a href="https://github.com/tig12/g5-aux/tree/main/eminence/math/dieudonne">https://github.com/tig12/g5-aux/tree/main/eminence/math/dieudonne</a>
 
 parents: []
