--- a/data/db/source/ertel/3a_sports.yml
+++ b/data/db/source/ertel/3a_sports.yml
@@ -14,7 +14,7 @@ description: |
   <br>Details about this file:
   <ul>
       <li><a href="https://newalchemypress.com/gauquelin/research3.php">https://newalchemypress.com/gauquelin/research3.php</a></li>
-      <li><a href="https://tig12.github.io/gauquelin5/ertel-4391-sport.html">https://tig12.github.io/gauquelin5/ertel-4391-sport.html</a></li>
+      <li><a href="https://tig12.github.io/g5/ertel-4391-sport.html">https://tig12.github.io/g5/ertel-4391-sport.html</a></li>
   </ul>
   
 parents: 
