--- a/data/db/source/csicop/rawlins-ertel-irving.yml
+++ b/data/db/source/csicop/rawlins-ertel-irving.yml
@@ -15,6 +15,6 @@ description: |
   <br>This file is the main information source used to add CSICOP test in Open Gauquelin database.
   <br>Original file : <a href="https://github.com/tig12/g5-aux/tree/master/1979-csicop/rawlins-ertel-irving">CSICOP.DOC</a>.
   <br>Integration to Open Gauquelin database : <a href="https://github.com/tig12/gauquelin5/tree/master/data/raw/csicop/rawlins-ertel-irving">rawlins-ertel-irving.csv</a>.
-  <br>See <a href="https://tig12.github.io/gauquelin5/csicop.html">tig12.github.io/gauquelin5/csicop.html</a> for more informations.
+  <br>See <a href="https://tig12.github.io/g5/csicop.html">tig12.github.io/g5/csicop.html</a> for more informations.
 parents:
   - csicop
