--- a/data/db/source/eminence/math/peiffer-dahan-dalmenico.yml
+++ b/data/db/source/eminence/math/peiffer-dahan-dalmenico.yml
@@ -21,7 +21,7 @@ description: |
   This book was used to count the number of times each mathematician is cited in the book index
   <br>"Index des noms propres", p 307-309 of the book
   
-  <br><br>See <a href="https://tig12.github.io/gauquelin5/eminence-math.html">https://tig12.github.io/gauquelin5/eminence-math.html</a>
+  <br><br>See <a href="https://tig12.github.io/g5/eminence-math.html">https://tig12.github.io/g5/eminence-math.html</a>
   <br>See <a href="https://github.com/tig12/g5-aux/tree/main/eminence/math/peiffer-dahan-dalmenico">https://github.com/tig12/g5-aux/tree/main/eminence/math/peiffer-dahan-dalmenico</a>
 
 parents: []
