--- a/data/db/source/g5.yml
+++ b/data/db/source/g5.yml
@@ -9,5 +9,5 @@ type: computer-program
 author: Thierry Graff
 description: |
   Computer program developped to build the Open Gauquelin Database (current site).
-  <br>Documentation is located at <a href="https://tig12.github.io/gauquelin5">tig12.github.io/gauquelin5</a>
+  <br>Documentation is located at <a href="https://tig12.github.io/g5">tig12.github.io/g5</a>
   <br>Source code can be downloaded from <a href="https://github.com/tig12/gauquelin5">github.com/tig12/gauquelin5</a>
