--- a/data/db/source/muller/afd2-men-list.yml
+++ b/data/db/source/muller/afd2-men-list.yml
@@ -14,7 +14,7 @@ description: |
   <br>Text file built by Nick Kollerstrom (scan) and Thierry Graff (OCR and corrections).
   <br>Integration to Open Gauquelin database : <a href="https://github.com/tig12/gauquelin5/tree/master/data/raw/muller/afd2-men">muller-afd2-men.txt</a>.
   <br>Scans of original documents can be downloaded from repository <a href="https://github.com/tig12/g5-aux/tree/main/1992-muller2-men">github.com/tig12/g5-aux</a>.
-  <br>More information about this file : <a href="https://tig12.github.io/gauquelin5/muller2-612-men.html">tig12.github.io</a>.
+  <br>More information about this file : <a href="https://tig12.github.io/g5/muller2-612-men.html">tig12.github.io</a>.
 parents:
   - afd3-booklet
   - g5
