--- a/data/db/init/tweaks/A1.yml
+++ b/data/db/init/tweaks/A1.yml
@@ -13,7 +13,7 @@
     ACTION: update
     ISSUES:
       -
-        wikiproject: fix-gauquelin
+        wikiproject: fix-date
         mark: date
         description: |
           Page <a href="https://earlyaviators.com/eborn1.htm">https://earlyaviators.com/eborn1.htm</a> says: "11 July 1874 (some sources say 1873)". Gauquelin gives 1873. A check in civil registry is necessary to find out.
