Issue system, Müller2 famous men, CFEPP, Gauquelin 1955

--- a/data/db/init/tweaks/ertel-sport.yml
+++ b/data/db/init/tweaks/ertel-sport.yml
@@ -13,8 +13,9 @@
     ACTION: update
     ISSUES:
       -
-        wikiproject: fix-gauquelin
+        wikiproject: fix-date
         mark: date
+        type: date
         description: |
           Birth date comes from the internet, and must be checked.
   ids-in-sources:
