--- a/data/db/init/tweaks/A1.yml
+++ b/data/db/init/tweaks/A1.yml
@@ -15,6 +15,7 @@
       -
         wikiproject: fix-date
         mark: date
+        type: date
         description: |
           Page <a href="https://earlyaviators.com/eborn1.htm">https://earlyaviators.com/eborn1.htm</a> says: "11 July 1874 (some sources say 1873)". Gauquelin gives 1873. A check in civil registry is necessary to find out.
   ids-in-sources:
