--- a/data/db/source/gauq/g55.yml
+++ b/data/db/source/gauq/g55.yml
@@ -4,7 +4,7 @@ document:
     - 2021-12-15 01:17:23+01:00: Thierry Graff, creation
 
 name: L'influence des astres 
-slug: g55-book
+slug: g55
 type: book
 date: 1955
 authors:
