Continue wiki system ; backup, code not tested

--- a/src/model/wiki/BC.yml
+++ b/src/model/wiki/BC.yml
@@ -19,6 +19,7 @@ header:
 # 2 - Optional information related to opengauquelin database integration
 #
 opengauquelin:
+  trust: 
   projects:
     - 
   fix-issues:
